# polars-katas

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: weather.csv
downloader/: taxi-download.py  weather-download.py
katas/: 01_eager_mode.py
notebooks/: polars-katas.ipynb  test_polars.ipynb
