[project]
name = "polars-katas"
version = "0.1.0"
description = "Code katas to learn Polars"
authors = [
    {name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "polars>=0.20.23",
]

[project.optional-dependencies]
data = [
    "httpx>=0.27.0",
]
ide = [
    "jupyterlab>=4.2.0",
    "nbstripout>=0.7.1",
]
dev = [
    "pre-commit>=3.7.0",
]

[tool.rye]
managed = true
dev-dependencies = []

